--- a/TestNgPageObjectModelFrameWork/.classpath
+++ b/TestNgPageObjectModelFrameWork/.classpath
@@ -37,6 +37,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry exported="true" kind="src" path="/TestNgFrameWorkDemo"/>
 	<classpathentry exported="true" kind="src" path="/PageObjectModel_DesignPattern"/>
 	<classpathentry kind="output" path="target/classes"/>
