--- a/NopCommerce_BDD_Cucumber_Maven_Project/src/test/resources/config/configeration.properties
+++ b/NopCommerce_BDD_Cucumber_Maven_Project/src/test/resources/config/configeration.properties
@@ -1,5 +1,5 @@
 browserName = chrome 
-applicationUrl = https://demo.nopcommerce.com/login?returnUrl=%2F
+applicationUrl = https://demo.nopcommerce.com/
 username = mahossain3094@gmail.com
 password = Auto123456$
 firstname = Md
