--- a/IslahiArt_BDD_Cucumber_Maven_Project/pom.xml
+++ b/IslahiArt_BDD_Cucumber_Maven_Project/pom.xml
@@ -98,6 +98,13 @@
     <version>5.2.5</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.2</version>
+</dependency>
+
         <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
