--- a/Facebook_Page_Object_Model/.classpath
+++ b/Facebook_Page_Object_Model/.classpath
@@ -37,7 +37,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry exported="true" kind="src" path="/TestNgPageObjectModelFrameWork"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
