--- a/NopCommerce_BDD_Cucumber_Maven_Project/.classpath
+++ b/NopCommerce_BDD_Cucumber_Maven_Project/.classpath
@@ -26,8 +26,9 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -37,12 +38,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="/Users/mdhossain/.m2/repository/io/cucumber/cucumber-junit/7.18.0/cucumber-junit-7.18.0.jar" sourcepath="/Users/mdhossain/.m2/repository/io/cucumber/cucumber-junit/7.18.0/cucumber-junit-7.18.0-sources.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry exported="true" kind="lib" path="/Users/mdhossain/.m2/repository/io/cucumber/cucumber-junit/7.18.0/cucumber-junit-7.18.0.jar" sourcepath="/Users/mdhossain/.m2/repository/io/cucumber/cucumber-junit/7.18.0/cucumber-junit-7.18.0-sources.jar">
 		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 			<attribute name="javadoc_location" value="jar:file:/Users/mdhossain/.m2/repository/io/cucumber/cucumber-junit/7.18.0/cucumber-junit-7.18.0-javadoc.jar!/"/>
+			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="maven.groupId" value="io.cucumber"/>
 			<attribute name="maven.artifactId" value="cucumber-junit"/>
 			<attribute name="maven.version" value="7.18.0"/>
