--- a/Rest_Assured_Api_Maven_Project/.classpath
+++ b/Rest_Assured_Api_Maven_Project/.classpath
@@ -38,11 +38,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/mdhossain/.m2/repository/io/rest-assured/rest-assured/5.4.0/rest-assured-5.4.0.jar" sourcepath="/Users/mdhossain/.m2/repository/io/rest-assured/rest-assured/5.4.0/rest-assured-5.4.0-sources.jar">
+	<classpathentry exported="true" kind="lib" path="/Users/mdhossain/.m2/repository/io/rest-assured/rest-assured/5.4.0/rest-assured-5.4.0.jar" sourcepath="/Users/mdhossain/.m2/repository/io/rest-assured/rest-assured/5.4.0/rest-assured-5.4.0-sources.jar">
 		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 			<attribute name="javadoc_location" value="jar:file:/Users/mdhossain/.m2/repository/io/rest-assured/rest-assured/5.4.0/rest-assured-5.4.0-javadoc.jar!/"/>
+			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="maven.groupId" value="io.rest-assured"/>
 			<attribute name="maven.artifactId" value="rest-assured"/>
 			<attribute name="maven.version" value="5.4.0"/>
