--- a/Facebook_Page_Object_Model/.classpath
+++ b/Facebook_Page_Object_Model/.classpath
@@ -38,6 +38,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry exported="true" kind="src" path="/TestNgPageObjectModelFrameWork"/>
+	<classpathentry kind="src" path="/TestNgPageObjectModelFrameWork"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
