--- a/RestAssured_Api_Maven_Project/pom.xml
+++ b/RestAssured_Api_Maven_Project/pom.xml
@@ -96,6 +96,13 @@
     <scope>test</scope>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20240303</version>
+</dependency>
+
     <!-- Apache POI -->
     <dependency>
       <groupId>org.apache.poi</groupId>
