--- a/Rest_Assured_Api_Maven_Project/pom.xml
+++ b/Rest_Assured_Api_Maven_Project/pom.xml
@@ -85,6 +85,14 @@
       <scope>test</scope>
     </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20240303</version>
+</dependency>
+
+
     <!-- Apache POI -->
     <dependency>
       <groupId>org.apache.poi</groupId>
@@ -128,7 +136,7 @@
       <version>2.12.0</version>
     </dependency>
 
-    <!-- JUnit Jupiter dependencies -->
+  <!-- JUnit Jupiter dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -145,6 +153,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
